# Vestige

./: .gitignore  pyproject.toml  requirements.txt
config/: settings.yaml
vestige/data/: features.py  loader.py
