[project]
name = "vestige"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
vst = "cli.main:app"